[package]
name = "tres"
version = "0.0.0"
edition = "2021"
authors = ["Ben Reeves"]
license = "MIT OR Apache-2.0"
description = "Effortless, low overhead error tracing in Rust"
keywords = ["error", "tracing"]
categories = ["rust-patterns"]

[workspace]
members = ["crates/tres-result"]

[dependencies]
tres-result = { path = "crates/tres-result" }