[package]
name = "tres-result"
version = "0.0.0"
edition = "2021"
authors = ["Ben Reeves"]
description = "A result type that supports return tracing via the `?` operator"
keywords = ["error", "tracing"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
